fixed input box on mobile

--- a/stylesheets/taskstack.css
+++ b/stylesheets/taskstack.css
@@ -1,10 +1,14 @@
+@media only screen and (min-device-width:640px) {
+  .new-task {
+    margin-top: -95px;
+  }
+}
 .new-task {
   padding-top: 3px;
   margin-bottom: 45px;
   text-align: center;
   width: 100%;
   color: #7eb0d2;
-  margin-top: -95px;
 }
 .new-task input {
   color: #7c334f;
